@@ -91,6 +91,8 @@
   See: http://joye.site88.net/papers/JQ96lucas.pdf to make sure we're being
   efficient.
 
-- tests for forcomb.  write _generic_forcomb
+- tests for forcomb.  write _generic_forcomb.  Same for forperm.
+- is numtoperm a better idea?
+- permutation ordering isn't lexicographic
 
 - Simple test for ntheory alias
